// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accounts component Test Header snapshot testing 1`] = `
<div
  className="Header"
/>
`;

exports[`Accounts component Test menubar snapshot testing 1`] = `
<div
  className="AccountMenubar"
/>
`;
